docs(API Spec): adjust base on best practice
